2008-06-16  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CalcularTotalesGuias): Changed to use the new tables
	guias_compra_detalle and guias_compra.

2008-06-15  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (ClearPagosData): Deleted Function.
	(on_btn_ok_srch_provider_clicked): Added var tab and guide to know
	in what tab we are so we can know if we'll set on guide or invoice
	labels.
	(on_entry_guide_invoice_provider_activate): Changed from
	on_entry_guide_invoice_activate().
	(on_entry_invoice_provider_activate): Silly function that use
	on_entry_guide_invoice_provider_activate() to show up the search
	provider window.
	(compras_win): Added store to tree_view_invoice_list treeview.
	(IngresoDetalle): Use GtkSelection received with the signal.

2008-06-13  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (AsignarFactAGuia): Changed to use the
	plpsql function.

	* compras.c (InformeCompras, InformeComprasShow): Deleted.

	* postgres-functions.c (IngresarGuia): Added the column list to
	insert data.
	(IngresarDetalleDocumento): Changed to use the new tables
	separated for guide and invoice.

2008-06-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CloseAskIngreso|Canjeables|CanjeablesWindow): Deleted.
	(CheckCanjeables): Deleted.

	* ventas.c (ventas_win): Added initialize on NULL to GError.

	* compras.c (on_button_ok_ingress_clicked): Added code to deal
	with partial_invoice ingress.

	* tiempo.c (RefreshTime): Deleted function.
	(__days): Deleted.
	(__months): Deleted.

	* Makefile.am: Added 2008 to the copyright years list.

	* tiempo.c: Added 2008 to the copyright years list.

	* tipos.h: Added 2008 to the copyright years list. Deleted some
	vars used with the old interface.

	* compras.c (AddFactura): Changed to use GDate.
	(ShowProductDescription): Deleted function.
	(SearchProductHistory): Deleted old commented code. Added comments
	to keep out the use of label_canje and label_stock_pro vars.